problem and leaderboard -full

--- a/api/.env.example
+++ b/api/.env.example
@@ -24,3 +24,8 @@ JWT_EXPIRES_IN=7d
 
 # File Upload
 MAX_FILE_SIZE=10mb
+
+# Judge0 Configuration
+JUDGE0_API_URL=https://judge0-ce.p.rapidapi.com
+JUDGE0_API_HOST=judge0-ce.p.rapidapi.com
+JUDGE0_API_KEY=your_judge0_api_key_here
