add judge0 -back

--- a/api/.env.example
+++ b/api/.env.example
@@ -25,7 +25,12 @@ JWT_EXPIRES_IN=7d
 # File Upload
 MAX_FILE_SIZE=10mb
 
-# Judge0 Configuration
+# Judge0 Configuration (RapidAPI)
 JUDGE0_API_URL=https://judge0-ce.p.rapidapi.com
 JUDGE0_API_HOST=judge0-ce.p.rapidapi.com
-JUDGE0_API_KEY=your_judge0_api_key_here
+JUDGE0_API_KEY=017c961eb8mshf75d45721e7702dp10d6f1jsn0a1d01decf71
+
+# Judge0 Settings
+JUDGE0_MAX_WAIT_TIME=30000
+JUDGE0_TIMEOUT=15
+JUDGE0_MEMORY_LIMIT=128000
