add login with google -full

--- a/api/.env.example
+++ b/api/.env.example
@@ -22,6 +22,14 @@ ALLOWED_ORIGINS=http://localhost:4200,http://localhost:3000
 JWT_SECRET=your_super_secret_jwt_key_here
 JWT_EXPIRES_IN=7d
 
+# Google OAuth Configuration
+GOOGLE_CLIENT_ID=your_google_client_id_here
+GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+GOOGLE_CALLBACK_URL=http://localhost:3000/api/v1/auth/google/callback
+
+# Frontend URL for redirects
+CLIENT_URL=http://localhost:4200
+
 # File Upload
 MAX_FILE_SIZE=10mb
 
