--- a/api/package.json
+++ b/api/package.json
@@ -35,6 +35,9 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.14.5",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
     "sequelize": "^6.37.7",
     "socket.io": "^4.8.1"
   },
