--- a/cli/package.json
+++ b/cli/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.20",
+    "@google-cloud/local-auth": "^3.0.1",
     "ace-builds": "^1.43.2",
     "express": "^4.18.2",
+    "google-auth-library": "^10.3.0",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.8.1",
     "tslib": "^2.3.0",
