--- a/api/.env.example
+++ b/api/.env.example
@@ -27,6 +27,11 @@ GOOGLE_CLIENT_ID=your_google_client_id_here
 GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 GOOGLE_CALLBACK_URL=http://localhost:3000/api/v1/auth/google/callback
 
+# GitHub OAuth Configuration
+GITHUB_CLIENT_ID=your_github_client_id_here
+GITHUB_CLIENT_SECRET=your_github_client_secret_here
+GITHUB_CALLBACK_URL=http://localhost:3000/api/v1/auth/github/callback
+
 # Frontend URL for redirects
 CLIENT_URL=http://localhost:4200
 
