--- a/api/package.json
+++ b/api/package.json
@@ -36,6 +36,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.14.5",
     "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "sequelize": "^6.37.7",
