add AI project -ai

--- a/api/.env.example
+++ b/api/.env.example
@@ -47,3 +47,6 @@ JUDGE0_API_KEY=017c961eb8mshf75d45721e7702dp10d6f1jsn0a1d01decf71
 JUDGE0_MAX_WAIT_TIME=30000
 JUDGE0_TIMEOUT=15
 JUDGE0_MEMORY_LIMIT=128000
+
+# Python AI API Configuration
+PYTHON_AI_API_URL=http://localhost:8000
