--- a/api/.env.example
+++ b/api/.env.example
@@ -1,52 +1,60 @@
-# Environment Configuration
-NODE_ENV=development
+# Database Configuration
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=your_password
+DB_NAME=lfys_main
+DB_PORT=3306
 
 # Server Configuration
 PORT=3000
-API_PREFIX=/api/v1
+NODE_ENV=development
 
-# Database Configuration (MySQL)
-DB_NAME=lfysdb
-DB_USER=api_user
-DB_PASSWORD=api_password
-DB_HOST=localhost
-DB_PORT=3306
+# JWT Configuration
+JWT_SECRET=your_jwt_secret_key_here
+JWT_EXPIRES_IN=7d
+JWT_REFRESH_EXPIRES_IN=30d
+
+# Cookie Configuration
+COOKIE_DOMAIN=localhost
+COOKIE_SECURE=false
+
+# CORS Configuration
+CORS_ORIGIN=http://localhost:4200
+
+# OAuth Configuration
+# Google OAuth
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+GOOGLE_CALLBACK_URL=http://localhost:3000/api/auth/google/callback
+
+# GitHub OAuth
+GITHUB_CLIENT_ID=your_github_client_id
+GITHUB_CLIENT_SECRET=your_github_client_secret
+GITHUB_CALLBACK_URL=http://localhost:3000/api/auth/github/callback
+
+# VNPay Configuration
+VNPAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+VNPAY_TMN_CODE=YOUR_TMN_CODE
+VNPAY_HASH_SECRET=YOUR_HASH_SECRET
+VNPAY_RETURN_URL=http://localhost:4200/payment/vnpay-return
+
+# Email Configuration (Optional)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your_email@gmail.com
+SMTP_PASSWORD=your_app_password
+
+# File Upload Configuration
+MAX_FILE_SIZE=10485760
+UPLOAD_DIR=./uploads
+
+# Socket.IO Configuration
+SOCKET_CORS_ORIGIN=http://localhost:4200
+
+# Redis Configuration (Optional)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
 
 # Logging
 LOG_LEVEL=debug
-
-# CORS Configuration
-ALLOWED_ORIGINS=http://localhost:4200,http://localhost:3000
-
-# Security
-JWT_SECRET=your_super_secret_jwt_key_here
-JWT_EXPIRES_IN=7d
-
-# Google OAuth Configuration
-GOOGLE_CLIENT_ID=your_google_client_id_here
-GOOGLE_CLIENT_SECRET=your_google_client_secret_here
-GOOGLE_CALLBACK_URL=http://localhost:3000/api/v1/auth/google/callback
-
-# GitHub OAuth Configuration
-GITHUB_CLIENT_ID=your_github_client_id_here
-GITHUB_CLIENT_SECRET=your_github_client_secret_here
-GITHUB_CALLBACK_URL=http://localhost:3000/api/v1/auth/github/callback
-
-# Frontend URL for redirects
-CLIENT_URL=http://localhost:4200
-
-# File Upload
-MAX_FILE_SIZE=10mb
-
-# Judge0 Configuration (RapidAPI)
-JUDGE0_API_URL=https://judge0-ce.p.rapidapi.com
-JUDGE0_API_HOST=judge0-ce.p.rapidapi.com
-JUDGE0_API_KEY=017c961eb8mshf75d45721e7702dp10d6f1jsn0a1d01decf71
-
-# Judge0 Settings
-JUDGE0_MAX_WAIT_TIME=30000
-JUDGE0_TIMEOUT=15
-JUDGE0_MEMORY_LIMIT=128000
-
-# Python AI API Configuration
-PYTHON_AI_API_URL=http://localhost:8000
