--- a/ai/requirements.txt
+++ b/ai/requirements.txt
@@ -3,15 +3,13 @@ fastapi==0.104.1
 uvicorn==0.24.0
 pydantic==2.4.2
 
-# Database
-mysql-connector-python==8.2.0
-
 # AI/ML
 openai==1.3.0
 
 # Utilities
 python-multipart==0.0.6
 typing-extensions==4.8.0
+python-dotenv==1.0.0
 
 # Optional for production
 gunicorn==21.2.0
