--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
