--- a/api/.env.example
+++ b/api/.env.example
@@ -17,9 +17,11 @@ JWT_REFRESH_EXPIRES_IN=30d
 # Cookie Configuration
 COOKIE_DOMAIN=localhost
 COOKIE_SECURE=false
+# For production, use: COOKIE_DOMAIN=yourdomain.com and COOKIE_SECURE=true
 
 # CORS Configuration
 CORS_ORIGIN=http://localhost:4200
+# For production, use: CORS_ORIGIN=https://yourdomain.com,https://www.yourdomain.com
 
 # OAuth Configuration
 # Google OAuth
@@ -50,6 +52,7 @@ UPLOAD_DIR=./uploads
 
 # Socket.IO Configuration
 SOCKET_CORS_ORIGIN=http://localhost:4200
+# For production, use: SOCKET_CORS_ORIGIN=https://yourdomain.com,https://www.yourdomain.com
 
 # Redis Configuration (Optional)
 REDIS_HOST=localhost
