--- a/api/package.json
+++ b/api/package.json
@@ -13,7 +13,10 @@
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
     "docker:logs": "docker-compose logs -f",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:auth": "node test-auth.js",
+    "test:realtime": "node test-realtime-dev.js",
+    "test:socket": "node test-socket-connection.js"
   },
   "keywords": [
     "nodejs",
